--- a/.env
+++ b/.env
@@ -1,7 +1,17 @@
+NODE_ENV=development
+
+#server
 PORT=3030
 STATIC_PATH=./public
 
+#mysql
 db_host=localhost
 db_database=demo
 db_user=test
 db_password=123456
+
+#redis
+redis_host=127.0.0.1
+redis_password=123456
+redis_db=0
+
