--- a/.env
+++ b/.env
@@ -11,7 +11,8 @@ db_user=test
 db_password=123456
 
 #redis
-redis_host=127.0.0.1
-redis_password=123456
+redis_host=129.204.60.105
+redis_password=lty5201314
 redis_db=0
+redis_port=6379
 
