--- a/.env
+++ b/.env
@@ -12,7 +12,7 @@ db_password=123456
 
 #redis
 redis_host=129.204.60.105
-redis_password=lty5201314
+redis_password=lty5201314,
 redis_db=0
 redis_port=6379
 
