--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon ./bin/run.js",
-    "sequelize": "sequelize"
+    "sequelize": "sequelize",
+    "server": "webpack-dev-server --config=./webpack.config.js"
   },
   "author": "laitingyou@outlook.com",
   "license": "ISC",
   "dependencies": {
+    "@babel/polyfill": "^7.2.5",
+    "axios": "^0.18.0",
     "ejs": "^2.6.1",
     "koa-bodyparser": "^4.2.1",
     "koa-helmet": "^4.0.0",
@@ -28,9 +31,26 @@
     "ratelimiter": "^3.2.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-router-dom": "^4.3.1",
     "react-uwp": "^1.2.31",
     "redis": "^2.8.0",
     "sequelize": "^4.39.0",
-    "sequelize-cli": "^5.1.0"
+    "sequelize-cli": "^5.1.0",
+    "webpack": "^4.29.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-stage-0": "^7.0.0",
+    "babel-loader": "^8.0.5",
+    "css-loader": "^2.1.0",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1",
+    "webpack-dev-server": "^3.1.14"
   }
 }
